# c-cmake-template

./: .gitignore  CMakeLists.txt  README.md
.github/workflows/: cmake.yml
include/: hoge.h
src/: CMakeLists.txt  hoge.c
test/: CMakeLists.txt  hoge_test.c
